fix(auth): рабочая AD/LDAP-аутентификация (выпуск JWT с ролью)
Проверено на реальном AD (test.ru, ldap://...:389):
- AdAuthenticationProvider: при успешном bind возвращает CustomUserDetails
  (его ожидает JwtService) — роли берутся из локальной учётки, иначе
  ROLE_VIEWER по умолчанию; раньше возвращался User с пустыми ролями
  -> ClassCastException при выпуске токена.
- Убран дублирующий base в LdapQuery (LdapContextSource уже задаёт base,
  иначе DC=test,DC=ru,DC=test,DC=ru -> NO_OBJECT).
- referral=ignore + ignorePartialResultException(true): AD при поиске от
  корня возвращает continuation references (referral на DNS-имя домена),
  что роняло поиск UnknownHostException/PartialResultException.
- CustomUserDetails: конструктор для внешних (доменных) пользователей.

Результат: AD-вход solovyev_if -> 200, JWT с ROLE_VIEWER; неверный
пароль -> 401; доступ с AD-токеном к защищённым GET -> 200.

Примечание: CustomUserDetails.java также несёт ранее внесённую вами
нормализацию ролей (разделить неинтерактивно нельзя).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>